Location manager, utilities

--- a/Ambient925/Ambient925-Info.plist
+++ b/Ambient925/Ambient925-Info.plist
@@ -24,6 +24,8 @@
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationUsageDescription</key>
+	<string>Ambient925 needs your location to add to any ambient noise samples you generate</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
