Fixed concurrency error in sample uploading
Removed clunky queuing system and used Parse SDK method,
saveEventually, to take care of handling sample uploads when
offline/online.

--- a/Ambient925/Ambient925-Info.plist
+++ b/Ambient925/Ambient925-Info.plist
@@ -26,6 +26,8 @@
 	<true/>
 	<key>NSLocationUsageDescription</key>
 	<string>Ambient925 needs your location to add to any ambient noise samples you generate</string>
+	<key>UIMainStoryboardFile</key>
+	<string>MainStoryboard</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
