--- a/Ambient925/Ambient925-Info.plist
+++ b/Ambient925/Ambient925-Info.plist
@@ -49,5 +49,16 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>FacebookAppID</key>
+	<string>225257417607160</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb225257417607160</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
